--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-sessions": "^1.0.6",
     "mongoose": "^6.8.3",
-    "mongoose-encryption": "^2.1.2"
+    "mongoose-encryption": "^2.1.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2"
   }
 }
